--- a/views/layout.erb
+++ b/views/layout.erb
@@ -41,7 +41,7 @@
 			</nav>
 			<div>
 				<%if @error then %>
-						<div class="alert alert-error"><%=@error%></div>
+						<div class="alert alert-danger"><%=@error%></div>
 				<% end %>
 				<%= yield %>
 			</div>
