--- a/views/visit.erb
+++ b/views/visit.erb
@@ -7,13 +7,13 @@
       <form action="/visit" method="post" role="form" id="barberf">
 
         <div class="form-group">
-          <input name="client[name]" type="text" class="form-control" placeholder="Your Name" >
+          <input name="client[name]" type="text" class="form-control" placeholder="Your Name" value="<%= @c.name %>">
         </div>
         <div class="form-group">
-          <input name="client[phone]" type="text" class="form-control" placeholder="Your Phone Number" >
+          <input name="client[phone]" type="text" class="form-control" placeholder="Your Phone Number" value="<%= @c.phone %>">
         </div>
         <div class="form-group">
-          <input name="client[datestamp]" type="text" class="form-control" placeholder="Time for visit" >
+          <input name="client[datestamp]" type="text" class="form-control" placeholder="Time for visit" value="<%= @c.datestamp %>">
         </div>
 
         <p>Choise, your nail master </p>
