--- a/views/layout.erb
+++ b/views/layout.erb
@@ -34,7 +34,7 @@
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="/">Home</a></li>
 						<li><a href="/visit">Visit</a></li>
-						<li><a href="#">Link</a></li>
+						<li><a href="/bookings">Clients</a></li>
 					</ul>
 				 </div>
 				</div>
